# ai-compute-intelligence

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: cache-hygiene.yml  ci.yml  codeql.yml  dependency-review.yml  deploy-gate.yml  release.yml
docs/: architecture.md  attachment-review.md  demo-feature-matrix.md  demo-guide.md  prd-engineering-alignment-audit.md  releasing.md
frontend/: README.md  index.html  platform-mockup-v3.html
frontend/data/: demo_dataset.json
infra/onboarding/: README.md
infra/onboarding/github/: README.md
infra/onboarding/okta/: README.md
k8s/base/: deployment.yaml
scripts/: publish_wiki.sh  run_demo.sh  smoke_demo.sh
src/aci/: config.py
src/aci/api/: app.py  auth.py  runtime.py
src/aci/carbon/: calculator.py
tests/: conftest.py  time_constants.py
tests/glass_jaw/: locustfile.py  test_phase0_criteria.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_api_endpoints.py  test_circuit_breaker.py  test_confidence_trac_interceptor.py  test_equivalence_carbon_fbp.py  test_event_bus_scalability.py  test_event_schema.py  test_finops_pricing_forecast_integrations.py  test_graph_store_indexing.py  test_hre.py  test_index_store_lru.py  test_ingestion_connectors.py  test_intervention_registry.py  test_regressions_runtime_and_policy.py
wiki-src/: Home.md  Operations-and-Deployment.md  Platform-Overview.md  Security-and-Trust-Boundary.md  Technical-Architecture.md  Technical-Due-Diligence-Guide.md  YC-Diligence-Notes.md  _Sidebar.md
(+43 files in other folders)
